--- a/src/index.css
+++ b/src/index.css
@@ -1,124 +1,13 @@
 body {
-    background-color: rgb(36, 40, 47);;
-    padding: 5%;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-#root {
-    height: auto;
-    flex-wrap: wrap;
-    display: flex;
-    text-align: center;
-}
-
-#container {
-    display: block;
-    width: 100%;
-}
-
-button {
-    margin-left: 10px;
-}
-
-.containerinput {
-    margin: 40px;
-}
-
-.btn {
-    background-color: #09f;
-    box-shadow: 1px 1px 5px #eff1f341;
-    border: none;
-    text-shadow: 4px 2px 6px rgb(10, 10, 10);
-}
-
-.imgs {
-    margin: auto;
-    display: flex;
-}
-
-.container-api {
-    overflow: hidden;
-    border-radius: 20px;
-    box-shadow: 1px 1px 5px #eff1f3;
-    background-color: rgba(135, 155, 185, 0.308);
-    float: left;
-    margin: 20px;
-}
-
-p {
-    font-size: 18px;
-    color: rgb(151, 140, 140);
-    margin-bottom: 10px;
-}
-
-h2 {
-    color: rgba(245, 245, 245, 0.932);
-    text-shadow: 4px 2px 6px rgb(10, 10, 10);
-    font-size: 25px;
-    margin-top: 20px;
-}
-
-h3 {
-    font-size: 18px;
-    color: rgb(224, 224, 224);
-    text-shadow: 4px 2px 6px rgb(10, 10, 10);
-    margin-bottom: 25px;
-}
-
-h4 {
-    margin-bottom: 30px;
-    color: rgb(224, 224, 224);
-    text-shadow: 4px 2px 6px rgb(10, 10, 10);
-}
-
-.radiu-alive {
-    margin: auto;
-    margin-bottom: 10px;
-    border-radius: 50%;
-    width: 15px;
-    height: 15px;
-    background-color: rgba(40, 248, 33, 0.788);
-}
-
-.radiu-dead {
-    margin: auto;
-    margin-bottom: 10px;
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    background-color: rgba(248, 16, 16, 0.863);
-}
-
-.radiu-unknown {
-    margin: auto;
-    margin-bottom: 10px;
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    background-color: rgb(224, 224, 224);
-}
-
-.containerSpinner {
-    width: 100%;
-    height: 100vh;
-}
-
-.spinner {
-    border: 8px solid rgba(255, 255, 255, 0.205);
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    border-left-color: rgb(248, 248, 248);
-    margin: auto;
-    animation: spin 1s ease infinite;
-
-}
-
-    @keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-    transform: rotate(360deg);
-    }
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
